# Test

./: CMakeLists.txt  CMakeLists.txt.autosave  config.json  converterjson.cpp  converterjson.h  invertedindex.cpp  invertedindex.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml_ui.qml  searchengine_test.cpp  searchengine_test.h  searchserver.cpp  searchserver.h
